--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "react-reporting",
   "version": "0.0.1",
   "description": "A library for financial reporting build on react-table and react-semantic-ui",
+  "main": "index.js",
   "dependencies": {
     "react-table": "^7.0.0-rc.15",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.2"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3"
   },
   "directories": {
     "lib": "lib"
@@ -15,8 +26,9 @@
     "url": "git+https://github.com/imcallister/react-reporting.git"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/.bin/babel src --out-file index.js"
   },
-  "author": "",
+  "author": "Ian McAllister",
   "license": "MIT"
 }
