--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-reporting",
   "version": "0.0.2",
   "description": "A library for financial reporting build on react-table and react-semantic-ui",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "dependencies": {
     "react-table": "^7.0.0-rc.15",
     "semantic-ui-css": "^2.4.1",
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/babel src --out-file index.js"
+    "build": "./node_modules/.bin/babel ./src --out-dir ./dist --copy-files "
   },
   "author": "Ian McAllister",
   "license": "MIT"
