--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-reporting",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "A library for financial reporting build on react-table and react-semantic-ui",
   "main": "./dist/index.js",
   "dependencies": {
     "react-table": "^7.0.0-rc.15",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.2"
+    "semantic-ui-react": "^0.87.2",
+    "match-sorter": "4.0.2",
+    "object-hash": "2.0.3"
   },
   "peerDependencies": {
     "react": "^16.8.6",
